--- a/changelog.txt
+++ b/changelog.txt
@@ -194,3 +194,6 @@ ex : T2-28 => Le 28e Tile du tileset 2
 
 #TomRobette#16/06/2020#
 -Début de restructuration du projet pour LibGDX
+
+#TomRobette#17/06/2020#
+-Affichage des maps
