--- a/changelog.txt
+++ b/changelog.txt
@@ -1,124 +1,79 @@
-// ICI SERA NOTÉ LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE !
-// Exemple :
+// ICI SERA NOTÉ LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
-#TomRobette#04/03/2020#
-- Ajout d'un changelog
-- Modification de machin
-- Ajout de bidule
-
-// Merci de mettre les ajouts <strong>EN HAUT !!!</strong> du reste. Comme ça on descendra pour trouver les plus anciens 
-// changements.
 // Veuillez déposer à partir d'ici :
 
-#TomRobette#05/03/2020#
--Ajout d'un diagramme de classe avec celles qui sont déjà faites
--Ajout sur le diagramme des classes items, map, inventaire, la plupart des affichages UI, décor, pnj, etc. Il reste à compléter certaines
+#TomRobette#22/06/2020#
+-Modification du Launcher pour pouvoir passer entre plusieurs écrans
+-Ajout de l'écran du jeu
+-Ajout de l'écran titre (sans titre)
 
-#TomRobette#06/03/2020#
--Réorganisation des classes d'affichage en une seule
--Création d'un MainActivity
--CREATION DE LA STRUCTURE DU PROJET : ESIHO
+#TomRobette#18/06/2020#
+-Corrections de bugs liés aux déplacements
 
-#TomRobette#08/03/2020#
--Réorganisation de la structure du projet
--Ajout des Librairies Default et Contenu (voir les README dans chacun)
--Ajout des débuts de classes comme inventaire, objets, teams, etc
+#TomRobette#17/06/2020#
+-Affichage des maps
+-Reconstruction des déplacements
 
-#TomRobette#10/03/2020#
--Réorganisation de la librairie Ressources
--Ajout des débuts de classe pour Map, Decor et Pnj
--Début du MainActivity, du Controller, et des FXML
+#TomRobette#16/06/2020#
+-Début de restructuration du projet pour LibGDX
 
-#TomRobette#11/03/2020#
--Modifications des ID en String
--Ajout des coefficients d'armure et armes dans les modifiers du combat
--Correction des attributs de la classe Entity
+#TomRobette#08/06/2020#
+-L'interface de combat fonctionne !
 
-#ThomasDegave#11/03/2020#
--Réorganisation de la classe Pnj avec une liste d'image a la place d'une image
--Remplis la méthode initPnjs() avec les Pnj qui seront dans le jeu
--Commencer à completer la classe Entity
-!InitContenu Entity pas terminé
+#TomRobette#05/06/2020#
+-Refonte de la classe Combat
+-Interface de combat fonctionnelle mais très basique. Il reste à debugger.
 
-#ThomasDegave#12/03/2020#
--Création d'un package Test, qui contient un fichier par personne pour faire des test.
+#ThomasDegave#03/06/2020#
+-Création d'une maquette en fxml pour créer l'interface du profile
+-Création et début de l'interface du profile sans fxml
 
-#TomRobette#16/03/2020#
--Ajout d'une librairie Cheat
--Ajout d'un moteur aux cheats
--Ajout de Classes en fonction du type de cheat (Enlever, Ajouter, Téleporter, etc)
--Ajout d'un système d'analyse du code de cheat
--Classes Enlever et Ajouter terminées
--Ajout de Id dans la classe Team
--Modification de la listeentity de la classe Team en listePNJ
--Ajout des méthodes get et set Id, addPnj, removePnj et getInventaire à la classe Team
--Ajout de listeTeam dans la classe InitContenu
--Le MainActivity n'est maintenant plus lançable de lui-même, mais grâce à un launcher
+#TomRobette#01/06/2020#
+-Refondement des fonctions de Sauvegardes en sérialisation
 
-#TomRobette#21/03/2020#
--Ajout du système de priorisation des pnj en fonction de leur vitesse
--Création de l'IA de combat
--Création de système de tour par tour
--Ajout de l'utilisation de l'attaque sur une cible
--Pour l'instant il n'y a pas de saisie
+#TomRobette#25/05/2020#
+-Ajout d'une méthode getMap
+-Ajout d'une fonction de tp
 
-#TomRobette#22/03/2020#
--Ajout de méthodes liées à l'argent dans la classe Team
--Ajout d'un cheat pour ajouter de l'argent et pour en retirer
+#TomRobette#25/05/2020#
+-Correction de la classe Ajouter
+-Correction de la classe Enlever
+-Correction de la classe Engine
+-Ajout d'une fonction statique getItem dans Item
+-Ajout d'une fonction statique getTeam dans Team
 
-#TomRobette#31/03/2020#
--Ajout d'une fonction analyseVictoire() dans la class Combat
--Le combat s'arrête en cas de victoire ou de défaite
--Ajout d'une fonction lvlUp
+#TomRobette#22/05/2020#
+-Ajout d'un système de collision avec les npc
+-Ajout d'un système d'interaction avec les npc
 
+#TomRobette#21/05/2020#
+-Ajout d'un ArrayList d'ArrayList de Booléens pour les collisions dans la map
+-Ajout d'une fonction de lecture de fichiers de collisions dans Layer
+-Ajout de l'affichage de Pnjs dans la map
+-Création d'un système (Très rudimentaire) de collision
+-Correction d'un bug concernant l'affichage des maps et leurs coordonnées
+-Correction d'un bug concernant la lecture des collisions du Layer
 
-#ThomasDegave#31/03/2020#
--Création des pnj
+#TomRobette#19/05/2020#
+-Correction des bugs
 
-#AlexisO'grady#31/03/2020#
--Ajout dans la listeItems dans InitContenu d'un baton, d'une dague, d'une épée, de 2 armures et 2 potions
--Maj des fonctions useItem dans Arme, Armure, Consommable
--Ajout des fonctions addPv et removePv dans PV
+#TomRobette#18/05/2020#
+-Ajout d'une fonction directionnelle pour le déplacement
+-Ajout d'une animation lors du déplacement
 
-#TomRobette#06/04/2020#
--Ajout d'une classe Sauvegarde dans "GameData.Default.Save"
--Ajout d'une méthode écrivant une arborescence pour la sauvegarde si elle n'existe pas
--Ajout d'une méthode créant un fichier de sauvegarde
--Ajout d'une chaîne de caractère "position" dans Team ayant pour but de savoir où est l'équipe. 
-C'est une chaîne de caractère, il faut donc faire "id de la map"+"position x"+"position y".
--Correction de MoveList
--Ajout d'une méthode écrivant toute la progression du jeu (Avec les classes que nous avons pour l'instant) dans Sauvegarde
+#TomRobette#17/05/2020#
+-Ajout d'une lecture de touches
+-Ajout d'une initialisation de Tileset pour les Sprites de PNJs (Spritesets)
+-Ajout d'un PNJ joueur avec une liste de tilesets. La fonction d'appel est en statique dans PNJ
+-Ajout d'un système de déplacement (très basique)
 
-#FabienBoulnois#06/04/2020#
--Creation des pages Options / Nouvelle Partie
--Modifications du menu principal
+#TomRobette#16/05/2020#
+-Optimisation (majeure !) de l'affichage des maps (concernant la récupération et la lecture des tilesets)
 
-#AlexisO'grady#07/04/2020#
--Ajout d'un arc dans listeItems
--Ecriture d'items divers
-
-#TomRobette#13/04/2020#
--Ajout de la classe Quete et de ses méthodes
--Ajout de la listeQuetes et de sa procédure d'initialisation à InitContenu.
-
-#ThomasDegave#14/04/2020#
--Création d'un menu pour tester les differentes "maquettes" (espace de combat pour le moment)
-
-#ThomasDegave#15/04/2020#
--Boutons sur la droite de la page de combat sont fonctionnels
-
-#TomRobette#15/04/2020#
--Liaison du controleur combat et de la classe combat
-
-#ThomasDegave#22/04/2020#
--Création d'une page pour le lvl up
-
-#FabienBoulnois#29/04/2020#
--Creation de la page MortRespawn
--Ajout de la fonction test mort qui renvoit vers la page MortRespawn
-
-#TomRobette#02/05/2020#
--Les attaques ont été mises en statique
+#TomRobette#11/05/2020#
+-Il est maintenant possible d'afficher un tile venant d'une map
+-Modification du tableau de tableau de la classe Layer en une collection de collection
+-Affichage des maps terminé.
 
 #TomRobette#08/05/2020#
 -Changement majeur de la classe decor (transformée en la classe Tiles)
@@ -134,70 +89,114 @@ ex : T2-28 => Le 28e Tile du tileset 2
 -Ajout de la lecture des fichiers dans Layer
 -Ajout de la construction de couche dans Layer
 
-#TomRobette#11/05/2020#
--Il est maintenant possible d'afficher un tile venant d'une map
--Modification du tableau de tableau de la classe Layer en une collection de collection
--Affichage des maps terminé.
+#TomRobette#02/05/2020#
+-Les attaques ont été mises en statique
 
-#TomRobette#16/05/2020#
--Optimisation (majeure !) de l'affichage des maps (concernant la récupération et la lecture des tilesets)
+#FabienBoulnois#29/04/2020#
+-Creation de la page MortRespawn
+-Ajout de la fonction test mort qui renvoit vers la page MortRespawn
 
-#TomRobette#17/05/2020#
--Ajout d'une lecture de touches
--Ajout d'une initialisation de Tileset pour les Sprites de PNJs (Spritesets)
--Ajout d'un PNJ joueur avec une liste de tilesets. La fonction d'appel est en statique dans PNJ
--Ajout d'un système de déplacement (très basique)
+#ThomasDegave#22/04/2020#
+-Création d'une page pour le lvl up
 
-#TomRobette#18/05/2020#
--Ajout d'une fonction directionnelle pour le déplacement
--Ajout d'une animation lors du déplacement
+#TomRobette#15/04/2020#
+-Liaison du controleur combat et de la classe combat
 
-#TomRobette#19/05/2020#
--Correction des bugs
+#ThomasDegave#15/04/2020#
+-Boutons sur la droite de la page de combat sont fonctionnels
 
-#TomRobette#21/05/2020#
--Ajout d'un ArrayList d'ArrayList de Booléens pour les collisions dans la map
--Ajout d'une fonction de lecture de fichiers de collisions dans Layer
--Ajout de l'affichage de Pnjs dans la map
--Création d'un système (Très rudimentaire) de collision
--Correction d'un bug concernant l'affichage des maps et leurs coordonnées
--Correction d'un bug concernant la lecture des collisions du Layer
+#ThomasDegave#14/04/2020#
+-Création d'un menu pour tester les differentes "maquettes" (espace de combat pour le moment)
 
-#TomRobette#22/05/2020#
--Ajout d'un système de collision avec les npc
--Ajout d'un système d'interaction avec les npc
+#TomRobette#13/04/2020#
+-Ajout de la classe Quete et de ses méthodes
+-Ajout de la listeQuetes et de sa procédure d'initialisation à InitContenu.
 
-#TomRobette#25/05/2020#
--Correction de la classe Ajouter
--Correction de la classe Enlever
--Correction de la classe Engine
--Ajout d'une fonction statique getItem dans Item
--Ajout d'une fonction statique getTeam dans Team
+#AlexisO'grady#07/04/2020#
+-Ajout d'un arc dans listeItems
+-Ecriture d'items divers
 
-#TomRobette#25/05/2020#
--Ajout d'une méthode getMap
--Ajout d'une fonction de tp
+#FabienBoulnois#06/04/2020#
+-Creation des pages Options / Nouvelle Partie
+-Modifications du menu principal
 
-#TomRobette#01/06/2020#
--Refondement des fonctions de Sauvegardes en sérialisation
+#TomRobette#06/04/2020#
+-Ajout d'une classe Sauvegarde dans "GameData.Default.Save"
+-Ajout d'une méthode écrivant une arborescence pour la sauvegarde si elle n'existe pas
+-Ajout d'une méthode créant un fichier de sauvegarde
+-Ajout d'une chaîne de caractère "position" dans Team ayant pour but de savoir où est l'équipe. 
+C'est une chaîne de caractère, il faut donc faire "id de la map"+"position x"+"position y".
+-Correction de MoveList
+-Ajout d'une méthode écrivant toute la progression du jeu (Avec les classes que nous avons pour l'instant) dans Sauvegarde
 
-#ThomasDegave#03/06/2020#
--Création d'une maquette en fxml pour créer l'interface du profile
--Création et début de l'interface du profile sans fxml
+#AlexisO'grady#31/03/2020#
+-Ajout dans la listeItems dans InitContenu d'un baton, d'une dague, d'une épée, de 2 armures et 2 potions
+-Maj des fonctions useItem dans Arme, Armure, Consommable
+-Ajout des fonctions addPv et removePv dans PV
 
-#TomRobette#05/06/2020#
--Refonte de la classe Combat
--Interface de combat fonctionnelle mais très basique. Il reste à debugger.
+#ThomasDegave#31/03/2020#
+-Création des pnj
 
-#TomRobette#08/06/2020#
--L'interface de combat fonctionne !
+#TomRobette#31/03/2020#
+-Ajout d'une fonction analyseVictoire() dans la class Combat
+-Le combat s'arrête en cas de victoire ou de défaite
+-Ajout d'une fonction lvlUp
 
-#TomRobette#16/06/2020#
--Début de restructuration du projet pour LibGDX
+#TomRobette#22/03/2020#
+-Ajout de méthodes liées à l'argent dans la classe Team
+-Ajout d'un cheat pour ajouter de l'argent et pour en retirer
 
-#TomRobette#17/06/2020#
--Affichage des maps
--Reconstruction des déplacements
+#TomRobette#21/03/2020#
+-Ajout du système de priorisation des pnj en fonction de leur vitesse
+-Création de l'IA de combat
+-Création de système de tour par tour
+-Ajout de l'utilisation de l'attaque sur une cible
+-Pour l'instant il n'y a pas de saisie
 
-#TomRobette#18/06/2020#
--Corrections de bugs liés aux déplacements
+#TomRobette#16/03/2020#
+-Ajout d'une librairie Cheat
+-Ajout d'un moteur aux cheats
+-Ajout de Classes en fonction du type de cheat (Enlever, Ajouter, Téleporter, etc)
+-Ajout d'un système d'analyse du code de cheat
+-Classes Enlever et Ajouter terminées
+-Ajout de Id dans la classe Team
+-Modification de la listeentity de la classe Team en listePNJ
+-Ajout des méthodes get et set Id, addPnj, removePnj et getInventaire à la classe Team
+-Ajout de listeTeam dans la classe InitContenu
+-Le MainActivity n'est maintenant plus lançable de lui-même, mais grâce à un launcher
+
+#ThomasDegave#12/03/2020#
+-Création d'un package Test, qui contient un fichier par personne pour faire des test.
+
+#ThomasDegave#11/03/2020#
+-Réorganisation de la classe Pnj avec une liste d'image a la place d'une image
+-Remplis la méthode initPnjs() avec les Pnj qui seront dans le jeu
+-Commencer à completer la classe Entity
+!InitContenu Entity pas terminé
+
+#TomRobette#11/03/2020#
+-Modifications des ID en String
+-Ajout des coefficients d'armure et armes dans les modifiers du combat
+-Correction des attributs de la classe Entity
+
+#TomRobette#10/03/2020#
+-Réorganisation de la librairie Ressources
+-Ajout des débuts de classe pour Map, Decor et Pnj
+-Début du MainActivity, du Controller, et des FXML
+
+#TomRobette#08/03/2020#
+-Réorganisation de la structure du projet
+-Ajout des Librairies Default et Contenu (voir les README dans chacun)
+-Ajout des débuts de classes comme inventaire, objets, teams, etc
+
+#TomRobette#06/03/2020#
+-Réorganisation des classes d'affichage en une seule
+-Création d'un MainActivity
+-CREATION DE LA STRUCTURE DU PROJET : ESIHO
+
+#TomRobette#05/03/2020#
+-Ajout d'un diagramme de classe avec celles qui sont déjà faites
+-Ajout sur le diagramme des classes items, map, inventaire, la plupart des affichages UI, décor, pnj, etc. Il reste à compléter certaines
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+LES PLUS RÉCENTS EN HAUT !!!!!!
