--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 // Veuillez déposer à partir d'ici :
 
 #TomRobette#23/06/2020#
+-Ajout d'un écran de debug (ScreensScreen) où l'on sélectionne les autres écrans
 -Restructuration Majeure des Items
 -Restructuration Majeure des Teams
 -Restructuration Mineure des CombatEntities
