--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 // ICI SERA NOTÉ LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#02/07/2020#
+-Ajout d'animations pour les entités
 
 #TomRobette#23/06/2020#
 -Ajout d'un écran de debug (ScreensScreen) où l'on sélectionne les autres écrans
