--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,12 @@
-// ICI SERA NOTÉ LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
+// ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#13/07/2020#
+-Divers bugs réglés
+-Ajout d'une Team pour monstres
+-Ajout des noms lors du combat
+-Correction du positionnement des barres de vie
+
 #TomRobette#09/07/2020#
 -Ajout des barres de vies lors du combat
 -Refonte du système de combat
