--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 // ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#14/07/2020#
+-Ajout de l'écran pour switch le combattant
+
 #TomRobette#13/07/2020#
 -Divers bugs réglés
 -Ajout d'une Team pour monstres
