--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,14 @@
 // ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#17/07/2020#
+-CombatEntity et CombatEntityType renommés en Combattant et CombattantType
+-Ajout d'une classe Activable et Coffre, la seconde, ainsi que d'autres plus tard, hérite de la première.
+
+#TomRobette#17/07/2020#
+-Les combats sont fonctionnels
+-Corrections de divers bugs lors du combat
+
 #TomRobette#14/07/2020#
 -Ajout de l'écran pour switch le combattant
 
