--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 // ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#11/08/2020#
+-Correction du bug d'affichage lors de l'apparition des NPC
+
 #TomRobette#05/08/2020#
 -Ajout d'une pause activée lors d'une intéraction
 
