--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 
 // Veuillez déposer à partir d'ici :
 #TomRobette#11/08/2020#
+-Ajout de la possibilité de faire apparaître les NPC avec un sens prédéfini
 -Correction du bug d'affichage lors de l'apparition des NPC
 
 #TomRobette#05/08/2020#
