--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 // ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#20/08/2020#
+-Correction du bug d'affichage de l'inventaire
+
 #TomRobette#18/08/2020#
 -Ajout de la possibilité d'initialiser le contenu d'un coffre depuis le fichier .entities de la carte
 -Portage des discussions et ajout d'Items en classe Dialog
