--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 // ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#25/08/2020#
+-Ajout d'un dialog lors d'une fin de combat
+
 #TomRobette#20/08/2020#
 -Correction du bug d'affichage de l'inventaire
 -Ajout de la liste des combattants dans le menu inventaire
