--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 // ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#01/09/2020#
+-Ajout de la fonctionnalité de suppression d'entités
+-Les entités vaincues en combat désapparaissent
+
 #TomRobette#28/08/2020#
 -Ajout de PNJs et entités divers
 -Ajout d'un combattant Slime
