--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 #TomRobette#01/09/2020#
 -Ajout de la fonctionnalité de suppression d'entités
 -Les entités vaincues en combat désapparaissent
+-Classes Quest et QuestStatus faites
 
 #TomRobette#28/08/2020#
 -Ajout de PNJs et entités divers
