--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,11 @@
 -Ajout de la fonctionnalité de suppression d'entités
 -Les entités vaincues en combat désapparaissent
 -Classes Quest et QuestStatus faites
+-Ajout d'un dialog Journal pour voir les quêtes.
+-Correction de quelques bugs
+-Ajout du compteur d'or dans l'inventaire
+-Ajout d'un icon
+-Ajout d'un Titre au menu
 
 #TomRobette#28/08/2020#
 -Ajout de PNJs et entités divers
