--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,12 @@
 // ICI SERONT NOTÉES LES MODIFICATIONS FAITES (si elles sont assez pertinentes) AU CODE
 
 // Veuillez déposer à partir d'ici :
+#TomRobette#02/09/2020#
+-Corrections de bugs
+-Ajout d'un titre à la fenêtre
+-Création d'un .jar avec seulement le combat
+-Création d'un nouveau .jar non fonctionnel
+
 #TomRobette#01/09/2020#
 -Ajout de la fonctionnalité de suppression d'entités
 -Les entités vaincues en combat désapparaissent
