--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 -Ajout d'un titre à la fenêtre
 -Création d'un .jar avec seulement le combat
 -Création d'un nouveau .jar non fonctionnel
+-Correction du bug de localisation des tilesets
 
 #TomRobette#01/09/2020#
 -Ajout de la fonctionnalité de suppression d'entités
